feat(submission): add cancel and rejudge for submission

--- a/src/pages/submission/submission/SubmissionPage.module.less
+++ b/src/pages/submission/submission/SubmissionPage.module.less
@@ -1,3 +1,15 @@
+.operations {
+  :global(.ui.button) {
+    &:not(:last-child) {
+      margin-right: 14px !important;
+    }
+
+    &:last-child {
+      margin-right: 0 !important;
+    }
+  }
+}
+
 .languageOptions {
   white-space: nowrap;
 }
