feat(*): improve css compatibility

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -80,6 +80,7 @@ html, body, :global(#root), .sidebarPushable, .sidebarPusher {
   margin-top: 49px;
   padding-top: 28px;
   height: calc(100% - 49px);
+  overflow-y: auto;
   overflow-y: overlay;
   -webkit-overflow-scrolling: touch !important;
   overflow-x: hidden;
