--- a/src/pages/problem/problem-set/ProblemSetPage.module.less
+++ b/src/pages/problem/problem-set/ProblemSetPage.module.less
@@ -65,6 +65,7 @@
 
 .tagsList {
   height: 300px;
+  overflow: auto;
   overflow: overlay;
   margin-top: 15px !important;
   margin-bottom: 28px !important;
