--- a/src/pages/problem/problem-set/ProblemTagManager.module.less
+++ b/src/pages/problem/problem-set/ProblemTagManager.module.less
@@ -50,6 +50,7 @@
   height: 30vh;
   min-height: 200px;
   overflow: visible;
+  overflow-y: auto;
   overflow-y: overlay;
   width: calc(100% + 42px);
   padding-top: 21px;
