--- a/src/pages/problem/index/ProblemPage.module.less
+++ b/src/pages/problem/index/ProblemPage.module.less
@@ -87,18 +87,22 @@
 
   flex-grow: 1;
 
-  .editorContainer {
-    top: 0;
-    left: 0;
-    width: 100%;
+  .editorContainerWrapper {
     height: calc(100vh - 341px);
     min-height: 100%;
+    display: flex;
+    flex-direction: column;
 
-    textarea {
-      border-radius: 0 !important;
+    .editorContainer {
       width: 100%;
-      height: 100%;
-      resize: none !important;
+      flex-grow: 1;
+
+      textarea {
+        border-radius: 0 !important;
+        width: 100%;
+        height: 100%;
+        resize: none !important;
+      }
     }
   }
 }
@@ -111,6 +115,21 @@
 
 .submitViewForm, .submitButton {
   margin-top: 25px !important;
+}
+
+.lastSubmission {
+  margin-top: 19px;
+  display: flex;
+  align-items: center;
+
+  :global(.ui.header) {
+    margin-bottom: 0;
+    margin-right: auto;
+  }
+
+  .scoreText {
+    margin-left: 10px;
+  }
 }
 
 .actionMenusWrapper {
