feat(problem): add "Accepted" icon on problem page

--- a/src/pages/problem/index/ProblemPage.module.less
+++ b/src/pages/problem/index/ProblemPage.module.less
@@ -26,6 +26,16 @@
   }
 }
 
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.lastAcceptedSubmission {
+  font-size: 0.7em;
+  margin-right: 3px;
+}
+
 .labels {
   margin-top: -2px;
   white-space: nowrap; // FIXME
