--- a/src/pages/user/users/UsersPage.module.less
+++ b/src/pages/user/users/UsersPage.module.less
@@ -1,5 +1,11 @@
-.searchContainer {
+.header {
   margin-bottom: 26px;
+  display: flex;
+
+  .manageGroups {
+    margin-left: auto !important;
+    margin-right: 0 !important;
+  }
 }
 
 .link {
