refactor(problem): separate components in judge settings page for problem type abstraction

--- a/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
+++ b/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
@@ -1,16 +1,4 @@
-@color_0: #db2828;
-@color_1: #f2711c;
-@color_2: #fbbd08;
-@color_3: #b5cc18;
-@color_4: #21ba45;
-@color_5: #00b5ad;
-@color_6: #2185d0;
-@color_7: #6435c9;
-@color_8: #a333c8;
-@color_9: #e03997;
-@color_10: #a5673f;
-@color_11: #767676;
-@color_12: #1b1c1d;
+@import "common/common.module.less";
 
 .leftContainer {
   position: sticky !important;
@@ -50,434 +38,25 @@
   margin-right: 0;
 }
 
-.dialogHeader {
-  position: relative;
-}
-
-.dialogHeaderInfo {
-  position: absolute;
-  right: 1.5rem;
-  top: 50%;
-  transform: translateY(-50%);
-  font-weight: normal;
-  opacity: 0.5;
-}
-
-.dialogMessage {
-  padding: 1em 0.85em !important;
-  white-space: pre-wrap;
-}
-
 .codeEditor {
   height: calc(100vh - 350px) !important;
 }
 
-.problemTypeField {
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
-
-  .problemTypeDropdown {
-    width: 100% !important;
-  }
-
-  .problemTypeSwitchButton {
-    margin-left: 11px;
-    height: 38px;
-  }
-}
-
-.labeledInput {
-  :global(.ui.label) {
-    border-top-left-radius: 0 !important;
-    border-bottom-left-radius: 0 !important;
-  }
-  
-  & > input:not(:focus) {
-    border-right-width: 0 !important;
-  }
-}
-
-.autoAddTestcasesHelp {
-  white-space: pre-wrap;
-}
-
-.checkerMenuWrapper {
-  display: flex;
-  align-items: center;
+.problemTypeForm {
   margin-bottom: 14px;
 
-  :global(.header) {
-    margin-bottom: 0 !important;
-  }
-
-  :global(.menu) {
-    margin-left: 14px !important;
-    flex-grow: 1;
-    margin-top: 0 !important;
-  }
-}
-
-.checkerConfig {
-  &:empty {
-    display: none;
-  }
-
-  .description {
-    // margin-top: -10px;
-    font-size: 13px;
-    color: rgba(0, 0, 0, 0.4);
-  }
-
-  .custom {
-    .fileSelect {
-      :global(.menu) > :global(.item) {
-        padding: 11px 20px 11px 14px !important;
-      }
-
-      .fileIcon {
-        margin-left: -2px !important;
-      }
-    }
-
-    .languageOptions {
-      :global(.field) {
-        @margin: 7px;
-        width: calc(50% - @margin);
-        display: inline-block;
-      
-        &:nth-child(odd) {
-          margin-right: @margin;
-        }
-      
-        &:nth-child(even) {
-          margin-left: @margin;
-        }
-      }
-
-      margin-bottom: -14px;
-    }
-  }
-}
-
-.checkerConfigDescriptionPopup {
-  width: 280px !important;
-  max-width: none !important;
-}
-
-.menu {
-  border-radius: 0 !important;
-  height: 43px;
-
-  > :global(.item) {
-    border-radius: 0 !important;
-
-    &:first-child {
-      padding: .92857143em .8em !important;
-    }
-  }
-}
-
-.itemTitle {
-  width: 120px;
-  flex-grow: 1 !important;
-  white-space: nowrap;
-
-  &::before {
-    display: none;
-  }
-}
-
-.subtaskTitleTestcasesCount {
-  margin-left: auto;
-  opacity: 0.5;
-  font-size: 0.9em;
-}
-
-.itemWithIcon {
-  width: 43px;
-  padding: 0 !important;
-}
-
-.menuSubtaskHeader, .menuSubtaskFooter {
-  background-color: #f9f9f9 !important;
-}
-
-.menuSubtaskHeader {
-  border-top: .2em solid !important;
-  border-top-left-radius: .28571429rem !important;
-  border-top-right-radius: .28571429rem !important;
-
-  &.color_0 { border-top-color: @color_0 !important; }
-  &.color_1 { border-top-color: @color_1 !important; }
-  &.color_2 { border-top-color: @color_2 !important; }
-  &.color_3 { border-top-color: @color_3 !important; }
-  &.color_4 { border-top-color: @color_4 !important; }
-  &.color_5 { border-top-color: @color_5 !important; }
-  &.color_6 { border-top-color: @color_6 !important; }
-  &.color_7 { border-top-color: @color_7 !important; }
-  &.color_8 { border-top-color: @color_8 !important; }
-  &.color_9 { border-top-color: @color_9 !important; }
-  &.color_10 { border-top-color: @color_10 !important; }
-  &.color_11 { border-top-color: @color_11 !important; }
-  &.color_12 { border-top-color: @color_12 !important; }
-}
-
-// Add "#root" to force override Semantic UI's styles
-:global(#root) {
-  .itemSubtaskTimeLimit, .itemSubtaskMemoryLimit {
-    width: 95px;
-    padding: 13px 13px !important;
+  .field {
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
   
-    input {
-      text-align: center !important;
-      padding-left: 19px !important;
+    .dropdown {
+      width: 100% !important;
     }
   
-    :global(i.icon) {
-      opacity: 0.35;
-    }
-    
-    &:focus-within {
-      & + .itemLabel, :global(i.icon) {
-        opacity: 1;
-      }
-    }
-  
-    + .itemLabel::before {
-      display: none;
-    }
-  }
-
-  .itemSubtaskScore {
-    width: 70px;
-    padding: 13px 14px 13px 8px !important;
-  
-    :global(i.icon) {
-      opacity: 0.35;
-    }
-
-    &:focus-within {
-      :global(i.icon) {
-        opacity: 1;
-      }
-    }
-  
-    input {
-      text-align: center !important;
-      padding-right: 14px !important;
-    }
-  }
-
-  .itemSearchDropdown {
-    border: none !important;
-    border-radius: 0 !important;
-    flex-grow: 1;
-    flex-shrink: 1;
-  
-    input {
-      height: 100%;
-    }
-  
-    &::before {
-      display: none;
-    }
-  
-    :global(.menu) {
-      border-radius: 0 !important;
-      margin-left: -1px;
-      border-bottom-width: 1px !important;
-      width: calc(100% + 1px);
-    }
-  
-    :global(.dropdown.icon) {
-      top: unset;
-    }
-  }
-
-  .fileSelect {
-    :global(.menu) .iconInputOrOutput {
-      visibility: hidden;
-    }
-
-    :global(.text) {
-      padding-left: 1px;
-    }
-
-    :global(.text) .iconInputOrOutput {
-      margin-left: -0.5px;
-    }
-
-    :global(.item) .iconFile {
-      margin-right: 11px !important;
-    }
-
-    :global(.item) {
-      padding-right: 17.5px !important;
-    }
-
-    :global(.text), :global(.item) {
-      display: flex;
-      align-items: center;
-      width: 100%;
-
-      .filename {
-        max-width: calc(100% - 120px);
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        direction: rtl;
-        height: 28px;
-        line-height: 28px;
-        margin-top: -7px;
-        margin-bottom: -7px;
-      }
-
-      .fileSize {
-        opacity: 0.35;
-        margin-left: auto;
-      }
-    }
-  }
-
-  .itemTestcaseTimeLimit, .itemTestcaseMemoryLimit {
-    width: 120px;
-  
-    input {
-      text-align: center !important;
-    }
-  
-    :global(i.icon) {
-      opacity: 0.35;
-    }
-  
-    &:focus-within {
-      & + .itemLabel, :global(i.icon) {
-        opacity: 1;
-      }
-    }
-  
-    + .itemLabel {
-      width: 35px;
-  
-      &::before {
-        display: none;
-      }
-    }
-  }
-
-  .itemTestcaseScore {
-    width: 70px;
-    padding: 13px 14px 13px 8px !important;
-  
-    input {
-      text-align: center !important;
-      padding-right: 14px !important;
-    }
-  
-    &:focus-within {
-      :global(i.icon) {
-        opacity: 1;
-      }
-    }
-  }
-}
-
-.itemLabel {
-  padding-left: 0 !important;
-  padding-right: 13px !important;
-  margin-left: -10px;
-  font-weight: bolder !important;
-  justify-content: center;
-  opacity: 0.5;
-}
-
-.itemScoringTypeDropdown {
-  flex-grow: 1 !important;
-
-  &::before {
-    display: none;
-  }
-
-  :global(.dropdown.icon) {
-    margin-left: auto !important;
-  }
-}
-
-.menuTestcaseFirstLine {
-  border-bottom: none !important;
-}
-
-.menuTestcase {
-  border-left: none !important;
-  position: relative;
-
-  &::before {
-    content: "";
-    width: .2em;
-    height: 100%;
-    background-color: #d4d4d5;
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-  }
-
-  &.color_0::before { background-color: @color_0 !important; }
-  &.color_1::before { background-color: @color_1 !important; }
-  &.color_2::before { background-color: @color_2 !important; }
-  &.color_3::before { background-color: @color_3 !important; }
-  &.color_4::before { background-color: @color_4 !important; }
-  &.color_5::before { background-color: @color_5 !important; }
-  &.color_6::before { background-color: @color_6 !important; }
-  &.color_7::before { background-color: @color_7 !important; }
-  &.color_8::before { background-color: @color_8 !important; }
-  &.color_9::before { background-color: @color_9 !important; }
-  &.color_10::before { background-color: @color_10 !important; }
-  &.color_11::before { background-color: @color_11 !important; }
-  &.color_12::before { background-color: @color_12 !important; }  
-}
-
-.itemTestcaseTitle {
-  width: 70px;
-  justify-content: center;
-  font-weight: bolder !important;
-}
-
-.itemDependencies {
-  :global(.ui.label) {
-    border-radius: 0;
-    background-color: #f7f7f7 !important;
-    color: rgba(0, 0, 0, 0.85) !important;
-    margin: 2px 0 2px 4px !important;
-  }
-}
-
-.extraSourceFilesItem {
-  height: 41px;
-
-  .language {
-    width: 110px !important;
-    flex-grow: 0 !important;
-    background: white !important;
-  }
-  
-  :global(#root) & .dropdown {
-    border-left: 1px solid rgba(34, 36, 38, 0.1) !important;
-    width: calc((100% - 110px - 43px) * 0.65) !important;
-  }
-  
-  .input {
-    width: calc((100% - 110px - 43px) * 0.35) !important;
-    padding: 13px !important;
-
-    input:not(:placeholder-shown) + :global(.icon) {
-      opacity: 1 !important;
-    }
-  
-    &::before {
-      left: 0 !important;
+    .switchButton {
+      margin-left: 11px;
+      height: 38px;
     }
   }  
 }
