feat(problem): add interaction problem support

--- a/src/pages/problem/edit/ProblemEditPage.module.less
+++ b/src/pages/problem/edit/ProblemEditPage.module.less
@@ -3,6 +3,10 @@
   align-items: center;
 }
 
+.typeDropdown {
+  margin-left: 15px !important;
+}
+
 .backButton {
   margin-left: auto !important;
   margin-right: 10px !important;
