--- a/src/pages/problem/view/ProblemViewPage.module.less
+++ b/src/pages/problem/view/ProblemViewPage.module.less
@@ -113,6 +113,10 @@
 .sample {
   display: inline-flex !important;
   flex-direction: column;
+
+  &.empty {
+    display: none !important;
+  }
 }
 
 .sampleHeader {
