--- a/src/pages/problem/judge-settings/common/MetaEditor.module.less
+++ b/src/pages/problem/judge-settings/common/MetaEditor.module.less
@@ -1,10 +1,1 @@
-.labeledInput {
-  :global(.ui.label) {
-    border-top-left-radius: 0 !important;
-    border-bottom-left-radius: 0 !important;
-  }
-  
-  & > input:not(:focus) {
-    border-right-width: 0 !important;
-  }
-}
+@import "common.module.less";
