feat(style): enlarge form fields' labels' font size and bottom margin

--- a/src/index.less
+++ b/src/index.less
@@ -12,6 +12,11 @@
   }
 }
 
+.ui.form .field > label {
+  font-size: 14px !important;
+  margin-bottom: 8px !important;
+}
+
 // https://github.com/Semantic-Org/Semantic-UI-React/issues/3133
 .ui.dimmer .ui.workaround.loader::before {
   border-color: rgba(0, 0, 0, 0.1);
