refactor(*): extract common code for code language and option <Select>s to one component

--- a/src/pages/problem/judge-settings/common/CheckerEditor.module.less
+++ b/src/pages/problem/judge-settings/common/CheckerEditor.module.less
@@ -55,6 +55,8 @@
         &:nth-child(even) {
           margin-left: @margin;
         }
+
+        margin-bottom: 14px !important;
       }
     }
 
