feat(auth): add reset password page

--- a/src/pages/auth/common.module.less
+++ b/src/pages/auth/common.module.less
@@ -20,11 +20,6 @@
       }
     }
   }
-
-  // It's relative to the field, not the row...
-  .passwords > :global(div:last-of-type .ui.label) {
-    left: 284px !important;
-  }
 }
 
 .header {
@@ -46,4 +41,11 @@
 .message {
   text-align: center;
   box-shadow: none !important;
+}
+
+.inputAction {
+  position: absolute;
+  z-index: 1;
+  margin-top: 9.25px;
+  right: 25px;
 }
