fix(*): fix CSS after upgrading to semantic-ui-react v1.x
Semantic-Org/Semantic-UI-React#4046

--- a/src/pages/problem/judge-settings/common/TestDataFileSelector.module.less
+++ b/src/pages/problem/judge-settings/common/TestDataFileSelector.module.less
@@ -17,7 +17,11 @@
       padding-right: 17.5px !important;
     }
 
-    :global(.text), :global(.item) {
+    :global(.menu) {
+      overflow-y: scroll;
+    }
+
+    .itemWrapper {
       display: flex;
       align-items: center;
       width: 100%;
