fix(user): fix user preference page element width

--- a/src/pages/user/edit/UserEdit.module.less
+++ b/src/pages/user/edit/UserEdit.module.less
@@ -78,7 +78,7 @@
   margin-top: 22px !important;
 }
 
-.notFullWidth {
+:global(#root) .notFullWidth {
   width: calc(100% - @profileAvatarWidth - @profileMargin) !important;
 }
 
