fix(problems): fix problem tag manager color dropdown's CSS

--- a/src/pages/problem/problem-set/ProblemTagManager.module.less
+++ b/src/pages/problem/problem-set/ProblemTagManager.module.less
@@ -30,6 +30,14 @@
 }
 
 .colorDropdown {
+  > :global(.dropdown) {
+    min-width: 198px !important;
+  }
+
+  :global(.label) {
+    margin-right: 11px !important;
+  }
+
   margin-bottom: 0 !important;
 }
 
