--- a/src/pages/problem/edit/ProblemEditPage.module.less
+++ b/src/pages/problem/edit/ProblemEditPage.module.less
@@ -104,4 +104,8 @@
   :global(.dimmer) {
     background-color: rgba(255, 255, 255, 0.6) !important;
   }
+
+  > .sectionSegment {
+    margin-bottom: 0 !important;
+  }
 }
