--- a/src/pages/submission/componments/SubmissionItem.module.less
+++ b/src/pages/submission/componments/SubmissionItem.module.less
@@ -197,6 +197,104 @@
   }
 }
 
+.submissionItemMobile {
+  &:first-child td {
+    padding-top: 0 !important;
+  }
+
+  &:last-child td {
+    padding-bottom: 0 !important;
+  }
+
+  .flexContainer {
+    @line-spacing: 7px;
+
+    display: flex;
+    text-align: left;
+    overflow: hidden;
+
+    // Column 1: status & score
+    //           answer
+    > :nth-child(1) {
+      // Wide screen
+      @media only screen and (min-width: 540px) {
+        width: 200px;
+
+        // Row 1
+        > :nth-child(1) a {
+          display: flex;
+
+          > :nth-child(1) {
+            flex-grow: 1;
+          }
+
+          > :nth-child(2) {
+            flex-shrink: 0;
+            width: 39px;
+            text-align: center;
+          }
+        }
+      }
+
+      // Narrow screen
+      @media only screen and (max-width: 539px) {
+        width: 110px;
+
+        :global(.statusicon) {
+          margin-right: 8px !important;
+        }
+        
+        :global(.statustext) {
+          display: none;
+        }
+      }
+
+      flex-shrink: 0;
+      padding-right: 11px;
+
+      // Row 1: status & score
+      > :nth-child(1) {
+        margin-bottom: @line-spacing;
+      }
+    }
+
+    // Column 2: problem
+    //           submitter & time
+    > :nth-child(2) {
+      flex-grow: 1;
+      overflow: hidden;
+
+      // Row 1: problem
+      > :nth-child(1) {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        margin-bottom: @line-spacing;
+      }
+
+      // Row 2: submitter & time
+      > :nth-child(2) {
+        display: flex;
+
+        // submitter
+        > :nth-child(1) {
+          flex-grow: 1;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        // time
+        > :nth-child(2) {
+          text-align: right;
+          padding-left: 11px;
+          flex-shrink: 1;
+        }
+      }
+    }
+  }
+}
+
 .submissionPage {
   @media only screen and (max-width: 1023px) {
     .columnTime,
