--- a/src/pages/submission/componments/SubmissionItem.module.less
+++ b/src/pages/submission/componments/SubmissionItem.module.less
@@ -325,8 +325,11 @@
 
     @media only screen and (max-width: 767px) {
       > div:last-child {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+
         :global(.icon) {
-          float: right;
           margin-left: 5px !important;
           margin-right: 0 !important;
         }
