refactor(*): check and observe screen size with window.matchMedia()

--- a/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
+++ b/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
@@ -1,6 +1,7 @@
 @import "common/common.module.less";
 
 .leftContainer {
+  height: calc(100vh - 105px);
   position: sticky !important;
   top: 0;
 }
