--- a/src/pages/problem/judge-settings/common/TestDataFileSelector.module.less
+++ b/src/pages/problem/judge-settings/common/TestDataFileSelector.module.less
@@ -26,6 +26,10 @@
       align-items: center;
       width: 100%;
 
+      .invisible {
+        visibility: hidden;
+      }
+
       .filename {
         max-width: calc(100% - 120px);
         white-space: nowrap;
