fix(user): minor fixes for locale select ui

--- a/src/pages/user/edit/UserEdit.module.less
+++ b/src/pages/user/edit/UserEdit.module.less
@@ -119,6 +119,12 @@
   }
 }
 
+.localeSelect {
+  :global(.icon), :global(.flag) {
+    margin-right: 11px !important;
+  }
+}
+
 .privilegeRow {
   display: flex;
   margin-top: 12px;
