refactor: rename LanguageOptions to CompileAndRunOptions

--- a/src/pages/problem/judge-settings/common/CheckerEditor.module.less
+++ b/src/pages/problem/judge-settings/common/CheckerEditor.module.less
@@ -42,7 +42,7 @@
       }
     }
 
-    .languageOptions {
+    .compileAndRunOptions {
       :global(.field) {
         @margin: 7px;
         width: calc(50% - @margin);
