--- a/src/pages/submission/submission/SubmissionPage.module.less
+++ b/src/pages/submission/submission/SubmissionPage.module.less
@@ -22,11 +22,11 @@
   }
 }
 
-.languageOptions {
+.compileAndRunOptions {
   white-space: nowrap;
 }
 
-.languageOptionsName {
+.compileAndRunOptionsName {
   padding-right: 12px;
 }
 
